// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render bottom slot 1`] = `
<div class="ca2-card">
  <div class="ca2-card__header">
    <div class="ca2-card__content">
      <div></div>
      <div class="ca2-card__bottom">Custom Bottom</div>
    </div>
  </div>
</div>
`;

exports[`render origin-price slot 1`] = `
<div class="ca2-card">
  <div class="ca2-card__header">
    <div class="ca2-card__content">
      <div></div>
      <div class="ca2-card__bottom">
        <div class="ca2-card__origin-price">Custom Origin Price</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render price & num slot 1`] = `
<div class="ca2-card">
  <div class="ca2-card__header">
    <div class="ca2-card__content">
      <div></div>
      <div class="ca2-card__bottom">
        <div class="ca2-card__price">Custom Price</div>
        <div class="ca2-card__num">Custom Num</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render thumb & tag slot 1`] = `
<div class="ca2-card">
  <div class="ca2-card__header"><a class="ca2-card__thumb">Custom Thumb<div class="ca2-card__tag">Custom Tag</div></a>
    <div class="ca2-card__content">
      <div></div>
    </div>
  </div>
</div>
`;

exports[`render title & desc slot 1`] = `
<div class="ca2-card">
  <div class="ca2-card__header">
    <div class="ca2-card__content">
      <div>Custom TitleCustom desc</div>
    </div>
  </div>
</div>
`;

exports[`render price & price-top slot 1`] = `
<div class="ca2-card">
  <div class="ca2-card__header">
    <div class="ca2-card__content">
      <div></div>
      <div class="ca2-card__bottom">Custom Price-top<div class="ca2-card__price">Custom Price</div>
      </div>
    </div>
  </div>
</div>
`;